--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ussp/new_Items_sssp.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ussp/new_Items_sssp.yml
@@ -226,6 +226,11 @@
   - type: GuideHelp
     guides:
     - Medical Doctor
+  #ss220 add pdaidpainter start
+  - type: Tag
+    tags:
+    - DoorBumpOpener
+  #ss220 add pdaidpainter end
 
 - type: entity
   parent: ClothingBeltUsspWebbing
