--- a/Resources/Prototypes/Recipes/Lathes/Packs/service.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/service.yml
@@ -44,6 +44,7 @@
   - ClothingBackpackWaterTank
   - MegaSprayBottle
   - TrashBagAdvanced #SS220 Borg Modules
+  - PdaIdPainterMachineCircuitboard #ss220 add pdaidpainter
 
 - type: latheRecipePack
   id: Instruments
