--- a/Resources/Prototypes/SS220/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Devices/pda.yml
@@ -32,7 +32,7 @@
   - type: Icon
     sprite: Objects/Devices/pda.rsi
     state: pda-ce_dark
-    
+
 - type: entity
   parent: BasePDA
   id: SeniorServicePDA
@@ -65,6 +65,15 @@
       visible: false #SS220 PDA-Resprite-End
   - type: Icon
     state: pda-seniorservice
+  #ss220 add pdaidpainter start
+  - type: Tag
+    tags:
+    - WhitelistPdaIdPainter
+    - DoorBumpOpener
+    - WhitelistChameleon
+    - WhitelistChameleonPDA
+  #ss220 add pdaidpainter end
+
 - type: entity
   parent: BasePDA
   id: MagistratePDA
@@ -99,6 +108,14 @@
   - type: Icon
     sprite: Objects/Devices/pda.rsi
     state: pda-magistrate
+  #ss220 add pdaidpainter start
+  - type: Tag
+    tags:
+    - WhitelistPdaIdPainter
+    - DoorBumpOpener
+    - WhitelistChameleon
+    - WhitelistChameleonPDA
+  #ss220 add pdaidpainter end
 
 - type: entity
   parent: DeathsquadPDA
@@ -191,6 +208,14 @@
       visible: false
   - type: Icon
     state: pda-bs
+  #ss220 add pdaidpainter start
+  - type: Tag
+    tags:
+    - WhitelistPdaIdPainter
+    - DoorBumpOpener
+    - WhitelistChameleon
+    - WhitelistChameleonPDA
+  #ss220 add pdaidpainter end
 
 - type: entity
   parent: BasePDA
@@ -223,6 +248,14 @@
       visible: false
   - type: Icon
     state: pda-security
+  #ss220 add pdaidpainter start
+  - type: Tag
+    tags:
+    - WhitelistPdaIdPainter
+    - DoorBumpOpener
+    - WhitelistChameleon
+    - WhitelistChameleonPDA
+  #ss220 add pdaidpainter end
 
 - type: entity
   parent: CentcomPDA
