--- a/Resources/Prototypes/SS220/Entities/Structures/Machines/computers.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Machines/computers.yml
@@ -70,3 +70,67 @@
       board: SalvageShuttleConsoleCircuitboard
     - type: StealTarget
       stealGroup: SalvageShuttleConsoleCircuitboard
+
+- type: entity
+  parent: [ BaseMachinePowered, ConstructibleMachine ]
+  id: ComputerPdaIdPainter
+  name: pda and id painter computer
+  description: pda and id painter computer
+  components:
+  - type: Sprite
+    sprite: SS220/Structures/Machines/pda_id_painter.rsi
+    snapCardinals: false
+    layers:
+    - state: off
+    - state: unlit
+      visible: false
+      map: ["enum.PowerDeviceVisualLayers.Powered"]
+  - type: GenericVisualizer
+    visuals:
+      enum.PowerDeviceVisuals.Powered:
+        enum.PowerDeviceVisualLayers.Powered:
+          True: { visible: true }
+          False: { visible: false }
+  - type: PdaIdPainter
+    idCardSlot:
+      name: pda-id-painter-console-id
+      ejectSound: /Audio/Machines/id_swipe.ogg
+      insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
+      ejectOnBreak: true
+      swap: false
+      whitelist:
+        components:
+        - IdCard
+    pdaSlot:
+      name: pda-id-painter-console-pda
+      ejectSound: /Audio/Machines/id_swipe.ogg
+      insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
+      ejectOnBreak: true
+      swap: false
+      whitelist:
+        components:
+        - Pda
+  - type: AccessReader
+    access: [ [ "Command" ] ]
+  - type: ActivatableUI
+    key: enum.PdaIdPainterUiKey.Key
+  - type: UserInterface
+    interfaces:
+      enum.PdaIdPainterUiKey.Key:
+        type: PdaIdPainterBoundUserInterface
+  - type: Machine
+    board: PdaIdPainterMachineCircuitboard
+  - type: PointLight
+    radius: 1.5
+    energy: 1.6
+    color: "#3c5eb5"
+  - type: ItemSlots
+  - type: ContainerContainer
+    containers:
+      board: !type:Container
+      id_painter_slot: !type:ContainerSlot
+      pda_painter_slot: !type:ContainerSlot
+  - type: Appearance
+  - type: ActivatableUIRequiresPower
+  - type: WiresPanel
+  - type: WiresVisuals
