--- a/Resources/Audio/SS220/Voice/Goal/attributions.yml
+++ b/Resources/Audio/SS220/Voice/Goal/attributions.yml
@@ -1,5 +1,7 @@
 - files:
-  - gooool.ogg
-  license: "CC0-1.0"
+  - wycc_goal1.ogg
+  - wycc_goal2.ogg
+  - wycc_goal3.ogg
+  license: "Custom"
   copyright: "Modified by SkaldetSkaeg (Github), shortened, cleaned from background sounds, converted to OGG."
-  source: "https://www.myinstants.com/ru/instant/goool-7073/"
+  source: "https://www.twitch.tv/elwycco"
