--- a/Resources/Prototypes/SS220/Entities/Clothing/Masks/AlertSmartGasMask.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Masks/AlertSmartGasMask.yml
@@ -1,14 +1,16 @@
 - type: alertSmartGasMask
   id: AlertSmartGasMaskSupport
   name: alert-smart-gas-mask-support
-  iconPrototype: ClothingMaskGasSecurity
+  icon: /Textures/SS220/Interface/Actions/alert_smart_gas_mask/securitymask.png
   notificationType: Support
   locIdMessage: ["smartgasmask-support-message"]
+  coolDown: 120
 
 - type: alertSmartGasMask
   id: AlertSmartGasMaskHalt
   name: alert-smart-gas-mask-halt
-  iconPrototype: ClothingMaskGasSecurity
+  icon: /Textures/SS220/Interface/Actions/alert_smart_gas_mask/securitymask.png
   notificationType: Halt
   alertSound: /Audio/SS220/Items/SmartGasMask/sound_voice_complionator_halt.ogg
   locIdMessage: ["smartgasmask-halt-message-1", "smartgasmask-halt-message-2", "smartgasmask-halt-message-3"]
+  coolDown: 10
