--- a/Resources/Prototypes/Entities/Clothing/Neck/cloaks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/cloaks.yml
@@ -160,7 +160,7 @@
   description: A cloak made from the hide of resilient fauna from a distant planet, though its protective value has faded with its age.
   components:
   - type: Sprite
-    sprite: Clothing/Neck/Cloaks/goliathcloak.rsi
+    sprite: SS220/Clothing/Neck/Cloaks/goliathcloak.rsi #SS220-goliathresprite
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadHatHoodGoliathCloak
     requiredSlot:
