--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -340,6 +340,7 @@
   description: A slab of goliath meat. It's not very edible now, but it cooks great in lava.
   components:
   - type: Sprite
+    sprite: SS220/Objects/Consumable/Food/meat.rsi #SS220-goliathresprite
     state: goliath
   - type: SolutionContainerManager
     solutions:
@@ -1063,8 +1064,12 @@
     - Meat
     - Steak
   - type: Sprite
-    layers:
-    - state: goliath-cooked
+    #SS220-goliathresprite-begin
+    sprite: SS220/Objects/Consumable/Food/meat.rsi
+    state: goliath-cooked
+    #layers:
+    #- state: goliath-cooked
+    #SS220-goliathresprite-end
   - type: SolutionContainerManager
     solutions:
       food:
