--- a/Resources/Prototypes/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/materials.yml
@@ -762,7 +762,7 @@
   suffix: Full
   components:
   - type: Sprite
-    sprite: Objects/Materials/hide.rsi
+    sprite: SS220/Objects/Materials/hide.rsi #SS220-goliathresprite
     layers:
     - state: goliath_hide
       map: [ "base" ]
@@ -781,7 +781,7 @@
   - type: Item
     size: Large
     heldPrefix: goliathhide
-    sprite: Objects/Materials/hide.rsi
+    sprite: SS220/Objects/Materials/hide.rsi #SS220-goliathresprite
     shape:
     - 0,0,2,2
 
